# StyleSwin-v2

./: .gitignore  CHANGELOG.md  README.md  conftest.py  dataset_tool.py  dataset_tool_for_imagenet.py  download_models.py  eval.py  gen_images.py  pyproject.toml  requirements.txt  todo.md  train.py  train_styleswin.py
.claude/skills/run-styleswin/: SKILL.md  driver.sh
.github/workflows/: ci.yml
dataset/: imagenet_dataset.py
dnnlib/: __init__.py  util.py
models/: basic_layers.py  discriminator.py  generator.py
op/: __init__.py  fused_act.py
sbatch/: generate_1024x1024.sbatch  generate_256x256.sbatch  generate_512x512.sbatch  train_1024x1024.sbatch  train_256x256.sbatch  train_512x512.sbatch
sh/: generate_1024.sh  generate_256.sh  generate_512.sh  train_1024.sh  train_256.sh  train_512.sh
tests/: test_dataset_tool.py  test_rank_h5.py  test_smoke.py
torch_utils/: misc.py
training/: __init__.py  training_loop.py
utils/: CRDiffAug.py  fid_score.py  rank_h5.py  visualizer.py
